--- a/redirect/invite.html
+++ b/redirect/invite.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting</title>
-    <meta http-equiv="refresh" content="0; url=https://discord.com/oauth2/authorize?client_id=1202564598138535967&permissions=277083450689&scope=bot%20applications.commands">  
+    <meta http-equiv="refresh" content="0; url=https://discord.com/oauth2/authorize?client_id=1202564598138535967&permissions=277049765201&scope=bot+applications.commands">  
 </head>
 <body>
 <center>Redirecting</center>
