--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <nav class="sticky w-full z-20 top-0 left-0">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="nors-bot-website.vercel.html" class="flex items-center">
+            <a href="index.html" class="flex items-center">
                 <img src="images/clammy.png" draggable="false" class="h-7 mr-3" alt="IMG">
                 <span class="regularTextBold text-white self-center whitespace-nowrap">Clammy</span>
             </a>
