--- a/index.html
+++ b/index.html
@@ -416,6 +416,12 @@
                             <li class="mb-4">
                                 <a href="redirect/invite.html" target="_blank" class="gradientUnderline">Add to your server</a>
                             </li>
+                            <li class="mb-4">
+                                <a href="redirect/privacy.html" target="_blank" class="gradientUnderline">Privacy Policy</a>
+                            </li>
+                            <li class="mb-4">
+                                <a href="redirect/terms.html" target="_blank" class="gradientUnderline">Terms of Service</a>
+                            </li>
                         </ul>
                     </div>
                     <div>
